cmake_minimum_required(VERSION 2.8.4)
project(dullahan)

include_directories(
        ./rocksdb/include
        ./rocksdb
        ./smhasher
)

set(CMAKE_CXX_FLAGS  "-DOS_LINUX -DROCKSDB_PLATFORM_POSIX -g -pedantic -pthread -Wall -std=c++11")

set(SOURCE_FILES
        main.cpp
        env.hpp
        env.cpp

        ./readstore/tablet.cpp
        ./readstore/tablet.hpp
        ./readstore/key.hpp
        ./readstore/key.cpp
        ./readstore/utils.hpp
        ./readstore/ewahmerge.hpp
        ./readstore/ewahmerge.cpp

        ./records/record.pb.h
        ./records/record.pb.cc

        ./EWAHBoolArray/headers/ewahutil.h
        ./EWAHBoolArray/headers/boolarray.h
        ./EWAHBoolArray/headers/runninglengthword.h
        ./EWAHBoolArray/headers/ewah.h


        ./rocksdb/db/internal_stats.cc
        ./rocksdb/db/skiplist.h
        ./rocksdb/db/compaction_picker.h
        ./rocksdb/db/dbformat.h
        ./rocksdb/db/compaction.cc
        ./rocksdb/db/flush_scheduler.cc
        ./rocksdb/db/file_indexer.cc
        ./rocksdb/db/merge_operator.cc
        ./rocksdb/db/merge_helper.h
        ./rocksdb/db/snapshot.h
        ./rocksdb/db/compaction_job.h
        ./rocksdb/db/filename.h
        ./rocksdb/db/table_properties_collector.cc
        ./rocksdb/db/table_cache.h
        ./rocksdb/db/forward_iterator.cc
        ./rocksdb/db/log_writer.h
        ./rocksdb/db/merge_helper.cc
        ./rocksdb/db/flush_scheduler.h
        ./rocksdb/db/builder.h
        ./rocksdb/db/job_context.h
        ./rocksdb/db/filename.cc
        ./rocksdb/db/column_family.cc
        ./rocksdb/db/version_builder.h
        ./rocksdb/db/log_reader.cc
        ./rocksdb/db/write_thread.cc
        ./rocksdb/db/builder.cc
        ./rocksdb/db/flush_job.cc
        ./rocksdb/db/flush_job.h
        ./rocksdb/db/merge_context.h
        ./rocksdb/db/wal_manager.h
        ./rocksdb/db/version_set.cc
        ./rocksdb/db/db_impl_readonly.h
        ./rocksdb/db/memtable_list.cc
        ./rocksdb/db/compaction.h
        ./rocksdb/db/file_indexer.h
        ./rocksdb/db/table_properties_collector.h
        ./rocksdb/db/internal_stats.h
        ./rocksdb/db/write_batch.cc
        ./rocksdb/db/write_controller.h
        ./rocksdb/db/version_builder.cc
        ./rocksdb/db/dbformat.cc
        ./rocksdb/db/transaction_log_impl.h
        ./rocksdb/db/db_iter.h
        ./rocksdb/db/version_set.h
        ./rocksdb/db/db_impl.cc
        ./rocksdb/db/db_impl_debug.cc
        ./rocksdb/db/db_filesnapshot.cc
        ./rocksdb/db/c.cc
        ./rocksdb/db/version_edit.cc
        ./rocksdb/db/write_batch_internal.h
        ./rocksdb/db/db_iter.cc
        ./rocksdb/db/write_thread.h
        ./rocksdb/db/compaction_picker.cc
        ./rocksdb/db/repair.cc
        ./rocksdb/db/log_reader.h
        ./rocksdb/db/table_cache.cc
        ./rocksdb/db/log_format.h
        ./rocksdb/db/version_edit.h
        ./rocksdb/db/memtable_list.h
        ./rocksdb/db/forward_iterator.h
        ./rocksdb/db/transaction_log_impl.cc
        ./rocksdb/db/write_controller.cc
        ./rocksdb/db/wal_manager.cc
        ./rocksdb/db/memtable.cc
        ./rocksdb/db/log_writer.cc
        ./rocksdb/db/db_impl_readonly.cc
        ./rocksdb/db/compaction_job.cc
        ./rocksdb/db/db_impl.h
        ./rocksdb/db/column_family.h
        ./rocksdb/db/memtable.h
        ./rocksdb/helpers/memenv/memenv.cc
        ./rocksdb/hdfs/env_hdfs.h
        ./rocksdb/include/rocksdb/version.h
        ./rocksdb/include/rocksdb/universal_compaction.h
        ./rocksdb/include/rocksdb/listener.h
        ./rocksdb/include/rocksdb/iterator.h
        ./rocksdb/include/rocksdb/immutable_options.h
        ./rocksdb/include/rocksdb/options.h
        ./rocksdb/include/rocksdb/status.h
        ./rocksdb/include/rocksdb/write_batch.h
        ./rocksdb/include/rocksdb/c.h
        ./rocksdb/include/rocksdb/filter_policy.h
        ./rocksdb/include/rocksdb/cache.h
        ./rocksdb/include/rocksdb/metadata.h
        ./rocksdb/include/rocksdb/compaction_filter.h
        ./rocksdb/include/rocksdb/iostats_context.h
        ./rocksdb/include/rocksdb/db.h
        ./rocksdb/include/rocksdb/table_properties.h
        ./rocksdb/include/rocksdb/memtablerep.h
        ./rocksdb/include/rocksdb/ldb_tool.h
        ./rocksdb/include/rocksdb/merge_operator.h
        ./rocksdb/include/rocksdb/utilities/spatial_db.h
        ./rocksdb/include/rocksdb/utilities/write_batch_with_index.h
        ./rocksdb/include/rocksdb/utilities/stackable_db.h
        ./rocksdb/include/rocksdb/utilities/document_db.h
        ./rocksdb/include/rocksdb/utilities/checkpoint.h
        ./rocksdb/include/rocksdb/utilities/json_document.h
        ./rocksdb/include/rocksdb/utilities/leveldb_options.h
        ./rocksdb/include/rocksdb/utilities/geo_db.h
        ./rocksdb/include/rocksdb/utilities/convenience.h
        ./rocksdb/include/rocksdb/utilities/backupable_db.h
        ./rocksdb/include/rocksdb/utilities/utility_db.h
        ./rocksdb/include/rocksdb/utilities/db_ttl.h
        ./rocksdb/include/rocksdb/statistics.h
        ./rocksdb/include/rocksdb/sst_dump_tool.h
        ./rocksdb/include/rocksdb/env.h
        ./rocksdb/include/rocksdb/rate_limiter.h
        ./rocksdb/include/rocksdb/thread_status.h
        ./rocksdb/include/rocksdb/perf_context.h
        ./rocksdb/include/rocksdb/comparator.h
        ./rocksdb/include/rocksdb/slice.h
        ./rocksdb/include/rocksdb/table.h
        ./rocksdb/include/rocksdb/transaction_log.h
        ./rocksdb/include/rocksdb/slice_transform.h
        ./rocksdb/include/rocksdb/types.h
        ./rocksdb/include/rocksdb/flush_block_policy.h
        ./rocksdb/include/utilities/stackable_db.h
        ./rocksdb/include/utilities/document_db.h
        ./rocksdb/include/utilities/json_document.h
        ./rocksdb/include/utilities/geo_db.h
        ./rocksdb/include/utilities/backupable_db.h
        ./rocksdb/include/utilities/utility_db.h
        ./rocksdb/include/utilities/db_ttl.h
        ./rocksdb/util/mutable_cf_options.cc
        ./rocksdb/util/log_buffer.cc
        ./rocksdb/util/slice.cc
        ./rocksdb/util/string_util.cc
        ./rocksdb/util/skiplistrep.cc
        ./rocksdb/util/dynamic_bloom.h
        ./rocksdb/util/ldb_cmd.cc
        ./rocksdb/util/options.cc
        ./rocksdb/util/thread_local.h
        ./rocksdb/util/ldb_cmd_execute_result.h
        ./rocksdb/util/thread_status_impl.h
        ./rocksdb/util/murmurhash.cc
        ./rocksdb/util/logging.cc
        ./rocksdb/util/mock_env.cc
        ./rocksdb/util/env.cc
        ./rocksdb/util/env_posix.cc
        ./rocksdb/util/blob_store.cc
        ./rocksdb/util/auto_roll_logger.cc
        ./rocksdb/util/thread_local.cc
        ./rocksdb/util/arena.cc
        ./rocksdb/util/sst_dump_tool.cc
        ./rocksdb/util/coding.cc
        ./rocksdb/util/stop_watch.h
        ./rocksdb/util/hash_skiplist_rep.cc
        ./rocksdb/util/env_hdfs.cc
        ./rocksdb/util/status.cc
        ./rocksdb/util/ldb_cmd.h
        ./rocksdb/util/statistics.cc
        ./rocksdb/util/random.h
        ./rocksdb/util/coding.h
        ./rocksdb/util/ldb_tool.cc
        ./rocksdb/util/hash.cc
        ./rocksdb/util/db_info_dumper.cc
        ./rocksdb/util/build_version.h
        ./rocksdb/util/comparator.cc
        ./rocksdb/util/histogram.cc
        ./rocksdb/util/sync_point.h
        ./rocksdb/util/crc32c.cc
        ./rocksdb/util/xxhash.h
        ./rocksdb/util/crc32c.h
        ./rocksdb/util/perf_context.cc
        ./rocksdb/util/logging.h
        ./rocksdb/util/iostats_context.cc
        ./rocksdb/util/histogram.h
        ./rocksdb/util/hash_cuckoo_rep.cc
        ./rocksdb/util/perf_context_imp.h
        ./rocksdb/util/options_helper.h
        ./rocksdb/util/autovector.h
        ./rocksdb/util/db_info_dumper.h
        ./rocksdb/util/file_util.cc
        ./rocksdb/util/murmurhash.h
        ./rocksdb/util/auto_roll_logger.h
        ./rocksdb/util/string_util.h
        ./rocksdb/util/sync_point.cc
        ./rocksdb/util/mock_env.h
        ./rocksdb/util/thread_status_impl.cc
        ./rocksdb/util/hash_cuckoo_rep.h
        ./rocksdb/util/hash_linklist_rep.h
        ./rocksdb/util/hash_skiplist_rep.h
        ./rocksdb/util/hash_linklist_rep.cc
        ./rocksdb/util/statistics.h
        ./rocksdb/util/log_buffer.h
        ./rocksdb/util/dynamic_bloom.cc
        ./rocksdb/util/filter_policy.cc
        ./rocksdb/util/stl_wrappers.h
        ./rocksdb/util/blob_store.h
        ./rocksdb/util/scoped_arena_iterator.h
        ./rocksdb/util/options_builder.cc
        ./rocksdb/util/rate_limiter.h
        ./rocksdb/util/posix_logger.h
        ./rocksdb/util/mutable_cf_options.h
        ./rocksdb/util/file_util.h
        ./rocksdb/util/xxhash.cc
        ./rocksdb/util/mutexlock.h
        ./rocksdb/util/rate_limiter.cc
        ./rocksdb/util/iostats_context_imp.h
        ./rocksdb/util/vectorrep.cc
        ./rocksdb/util/hash.h
        ./rocksdb/util/options_helper.cc
        ./rocksdb/util/arena.h
        ./rocksdb/util/thread_status_impl_debug.cc
        ./rocksdb/util/bloom.cc
        ./rocksdb/util/cache.cc
        ./rocksdb/util/build_version.cc
        ./rocksdb/utilities/ttl/db_ttl_impl.h
        ./rocksdb/utilities/ttl/db_ttl_impl.cc
        ./rocksdb/utilities/compacted_db/compacted_db_impl.h
        ./rocksdb/utilities/compacted_db/compacted_db_impl.cc
        ./rocksdb/utilities/write_batch_with_index/write_batch_with_index.cc
        ./rocksdb/utilities/backupable/backupable_db.cc
        ./rocksdb/utilities/redis/redis_lists.h
        ./rocksdb/utilities/redis/redis_list_iterator.h
        ./rocksdb/utilities/redis/redis_list_exception.h
        ./rocksdb/utilities/redis/redis_lists.cc
        ./rocksdb/utilities/checkpoint/checkpoint.cc
        ./rocksdb/utilities/leveldb_options/leveldb_options.cc
        ./rocksdb/utilities/geodb/geodb_impl.cc
        ./rocksdb/utilities/geodb/geodb_impl.h
        ./rocksdb/utilities/merge_operators.h
        ./rocksdb/utilities/document/document_db.cc
        ./rocksdb/utilities/document/json_document.cc
        ./rocksdb/utilities/merge_operators/put.cc
        ./rocksdb/utilities/merge_operators/string_append/stringappend.h
        ./rocksdb/utilities/merge_operators/string_append/stringappend2.cc
        ./rocksdb/utilities/merge_operators/string_append/stringappend2.h
        ./rocksdb/utilities/merge_operators/string_append/stringappend.cc
        ./rocksdb/utilities/merge_operators/uint64add.cc
        ./rocksdb/utilities/spatialdb/utils.h
        ./rocksdb/utilities/spatialdb/spatial_db.cc
        ./rocksdb/third-party/rapidjson/document.h
        ./rocksdb/third-party/rapidjson/internal/pow10.h
        ./rocksdb/third-party/rapidjson/internal/stack.h
        ./rocksdb/third-party/rapidjson/internal/strfunc.h
        ./rocksdb/third-party/rapidjson/rapidjson.h
        ./rocksdb/third-party/rapidjson/reader.h
        ./rocksdb/third-party/rapidjson/prettywriter.h
        ./rocksdb/third-party/rapidjson/writer.h
        ./rocksdb/third-party/rapidjson/stringbuffer.h
        ./rocksdb/third-party/rapidjson/filestream.h
        ./rocksdb/table/meta_blocks.h
        ./rocksdb/table/block_hash_index.cc
        ./rocksdb/table/iterator_wrapper.h
        ./rocksdb/table/block_based_table_builder.cc
        ./rocksdb/table/cuckoo_table_builder.cc
        ./rocksdb/table/plain_table_reader.cc
        ./rocksdb/table/block.h
        ./rocksdb/table/block_based_table_factory.cc
        ./rocksdb/table/plain_table_builder.h
        ./rocksdb/table/filter_block.h
        ./rocksdb/table/full_filter_block.h
        ./rocksdb/table/bloom_block.h
        ./rocksdb/table/block_prefix_index.cc
        ./rocksdb/table/iter_heap.h
        ./rocksdb/table/get_context.cc
        ./rocksdb/table/block_based_table_factory.h
        ./rocksdb/table/merger.h
        ./rocksdb/table/adaptive_table_factory.h
        ./rocksdb/table/table_reader.h
        ./rocksdb/table/table_properties.cc
        ./rocksdb/table/block_builder.cc
        ./rocksdb/table/format.cc
        ./rocksdb/table/block_based_table_builder.h
        ./rocksdb/table/table_properties_internal.h
        ./rocksdb/table/plain_table_factory.h
        ./rocksdb/table/format.h
        ./rocksdb/table/plain_table_builder.cc
        ./rocksdb/table/block_based_table_reader.h
        ./rocksdb/table/two_level_iterator.h
        ./rocksdb/table/cuckoo_table_factory.cc
        ./rocksdb/table/adaptive_table_factory.cc
        ./rocksdb/table/full_filter_block.cc
        ./rocksdb/table/merger.cc
        ./rocksdb/table/block_prefix_index.h
        ./rocksdb/table/cuckoo_table_builder.h
        ./rocksdb/table/block_builder.h
        ./rocksdb/table/plain_table_reader.h
        ./rocksdb/table/flush_block_policy.cc
        ./rocksdb/table/plain_table_index.h
        ./rocksdb/table/table_builder.h
        ./rocksdb/table/plain_table_index.cc
        ./rocksdb/table/block_hash_index.h
        ./rocksdb/table/plain_table_factory.cc
        ./rocksdb/table/two_level_iterator.cc
        ./rocksdb/table/cuckoo_table_reader.h
        ./rocksdb/table/plain_table_key_coding.cc
        ./rocksdb/table/block_based_filter_block.cc
        ./rocksdb/table/mock_table.cc
        ./rocksdb/table/cuckoo_table_reader.cc
        ./rocksdb/table/cuckoo_table_factory.h
        ./rocksdb/table/meta_blocks.cc
        ./rocksdb/table/block_based_table_reader.cc
        ./rocksdb/table/bloom_block.cc
        ./rocksdb/table/plain_table_key_coding.h
        ./rocksdb/table/iterator.cc
        ./rocksdb/table/get_context.h
        ./rocksdb/table/mock_table.h
        ./rocksdb/table/block.cc
        ./rocksdb/table/block_based_filter_block.h
        ./rocksdb/port/stack_trace.h
        ./rocksdb/port/port_posix.h
        ./rocksdb/port/win/stdint.h
        ./rocksdb/port/port.h
        ./rocksdb/port/port_posix.cc
        ./rocksdb/port/likely.h
        ./rocksdb/port/stack_trace.cc

        ./smhasher/MurmurHash3.cpp
        ./smhasher/MurmurHash3.h
)

add_executable(dullahan ${SOURCE_FILES})
target_link_libraries(dullahan protobuf folly profiler)
